Closed Bug 112541 Opened 24 years ago Closed 22 years ago

ability to start/stop jprof from JS

Categories

(Core :: DOM: Core & HTML, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.2beta

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

(Whiteboard: [patch])

Attachments

(2 files, 1 obsolete file)

I have a patch that allows start/stop of jprof profiling from JS.
Awesome! (minor copy-paste of comment nit at the bottom of the patch).
Status: NEW → ASSIGNED
[bugzilla component to be deleted]
Blocks: 123569
Component: XP Utilities → JavaScript Engine
Component: JavaScript Engine → DOM Mozilla Extensions
Priority: -- → P3
Whiteboard: [patch]
Target Milestone: --- → mozilla1.2beta
QA Contact: scc → ian
dbaron?
Comment on attachment 148068 [details] [diff] [review] David's patch updated to deal with JP_RTC_HZ r=bzbarsky. jst, could you sr? This could make some testcases much easier to profile....
Attachment #148068 - Flags: superreview?(jst)
Attachment #148068 - Flags: review+
Comment on attachment 148068 [details] [diff] [review] David's patch updated to deal with JP_RTC_HZ Nice! sr=jst
Attachment #148068 - Flags: superreview?(jst) → superreview+
David, would you mind checking over the JP_RTC_HZ change I made? Also, was there a reason you never checked this in?
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Depends on: 443769
Component: DOM: Mozilla Extensions → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: