Allow starting/stopping jprof from JS (via JProfStartProfiling() and JProfStopProfiling() global functions).  Bug 112541, patch by dbaron, r=bzbarsky, sr=jst